respnsiveness add footer responsiveness to all screen-sizes fix overflow resize carving image in 425px

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -438,7 +438,7 @@ footer {
     }
 
   .hero-section {
-    height: 60vh;
+    height: 40vh;
   }
 
   .mzalendo {
@@ -492,6 +492,10 @@ footer {
 }
 
 @media (max-width: 425px) {
+  carving-image {
+    height: 35vh;
+  }
+
   .footer-image {
     margin-left:120px;
   }
